--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
                     </div>
                 </div>
         </section>
+        <section class="container-bg">
+            <div class="hero-container sale-container">
+                <div class="hero-info align-center">
+                    <h2>Hot Deal ! Sale Up To 25% <span style="color: rgba(229, 84, 115, 1);">Off</span></h2>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    <a class="button-primary" href="#">Sign Up</a>
+                </div>
+                <div class="hero-image">
+                    <img src="images/pngwing 8.png" alt="" srcset="">
+                </div>
+            </div>
+    </section>
     </main>
     <footer>
 
