second section done

--- a/index.html
+++ b/index.html
@@ -20,6 +20,34 @@
                     </div>
                 </div>
         </section>
+        <section>
+            <div class="feature-container">
+                <div class="feature-info">
+                    <h2>Our Featured Flowers</h2>
+                    <p>It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.</p>
+                </div>
+                <div class="feature-flowers-container">
+                    <div class="feature-flowers">
+                        <div class="flower-box-1">
+                            <img src="images/pngwing 6.png" alt="">
+                        </div>
+                        <p>Pink Flower Tree</p>
+                    </div>
+                    <div class="feature-flowers">
+                        <div class="flower-box-2">
+                            <img src="images/pngwing 5.png" alt="">
+                        </div>
+                        <p>Pink Flower Tree</p>
+                    </div>
+                    <div class="feature-flowers">
+                        <div class="flower-box-3">
+                            <img src="images/pngwing 7.png" alt="">
+                        </div>
+                        <p>Pink Flower Tree</p>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="container-bg">
             <div class="hero-container sale-container">
                 <div class="hero-info align-center">
