--- a/index.html
+++ b/index.html
@@ -60,6 +60,28 @@
                 </div>
             </div>
     </section>
+    <section>
+        <div class="feature-container insta-container">
+            <div class="feature-info">
+                <h2>Instagram</h2>
+                <p>It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.</p>
+            </div>
+            <div class="flower-images">
+                <img src="images/Flower 01.png" alt="">
+                <img src="images/Rectangle 4.png" alt="">
+                <img src="images/Rectangle 5.png" alt="">
+                <img src="images/Rectangle 6.png" alt="">
+            </div>
+        </div>
+    </section>
+    <section class="newsletter">
+        <div class="newsletter-container">
+            <div class="newsletter-info">
+
+            </div>
+            
+        </div>
+    </section>
     </main>
     <footer>
 
