--- a/index.html
+++ b/index.html
@@ -76,10 +76,16 @@
     </section>
     <section class="newsletter">
         <div class="newsletter-container">
-            <div class="newsletter-info">
-
+            <div class="newsletter-info feature-info">
+                <h2>Get The Latest Deals</h2>
+                <p>$30 coupon for first shopping</p>
             </div>
-            
+            <div class="newsletter-form">
+                <form>
+                    <input type="email" name="" placeholder="Enter your email here...." id="">
+                    <button class="button-primary" style="border: none; margin-top: 0;">Subscribe</button>
+                </form>
+            </div>
         </div>
     </section>
     </main>
