--- a/index.html
+++ b/index.html
@@ -90,7 +90,11 @@
     </section>
     </main>
     <footer>
-
+        <div class="footer-info align-center">
+            <h2 style="color: #fff;"><span style="color: rgba(229, 84, 115, 1);">Flower</span>Shop</h2>
+            <p>It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.</p>
+            <span class="copyright">@2020-2023, FlowerShop.com. All rights reserved.</span>
+        </div>
     </footer>
 </body>
 </html>
