bonus section added

--- a/index.html
+++ b/index.html
@@ -48,6 +48,29 @@
                 </div>
             </div>
         </section>
+            <div class="bonus-info-container">
+                <div class="feature-info">
+                    <h2>Our Flowers Category</h2>
+                    <p>It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.</p>
+                </div>
+            </div>
+            <div class="bonus-section-container">
+                <div class="category-boxs">
+                    <div class="category category-1"><span>HAND BOUQUET’S</span></div>
+                    <div class="category category-2"><span>BIRTHDAY</span></div>
+                </div>
+                <div class="gif-boxs">
+                    <img src="images/ezgif-1-2fec901f6d.gif" alt="">
+                </div>
+                <div class="category-boxs">
+                    <div class="category category-3"><span>CAKE & CHOCOLATES</span></div>
+                    <div class="category category-4"><span>ORCHIDS</span></div>
+                </div>
+            </div>
+        <section>
+
+        </section>
+
         <section class="container-bg">
             <div class="hero-container sale-container">
                 <div class="hero-info align-center">
